--- a/Doc/shapoid.tex
+++ b/Doc/shapoid.tex
@@ -2,7 +2,7 @@
 
 Shapoid is a C library providing the \begin{ttfamily}Shapoid\end{ttfamily} structure and its functions which can be used to manipulate Shapoid objects (see next section for details).\\
 
-It uses the \begin{ttfamily}PBErr\end{ttfamily}, \begin{ttfamily}PBMath\end{ttfamily} and \begin{ttfamily}GSet\end{ttfamily} library.\\
+It uses the \begin{ttfamily}PBErr\end{ttfamily}, \begin{ttfamily}PBMath\end{ttfamily} and \begin{ttfamily}GSet\end{ttfamily} libraries.\\
 
 \section{Definitions}
 
